2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-05-28  Satyajit Kanungo <satyajit.kanungo@wipro.com>

        * gnome-mouse-properties.c : Changed the help file link
          to get the help document from user-guide.

2002-05-26  Jody Goldberg <jody@gnome.org>

	* gnome-mouse-properties.c (dialog_response_cb) : Improve handling of
	  help failures.

Sun May 26 11:31:34 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-mouse-properties.c (main): use APPID instead of argv[0]

2002-05-22  jacob berkman  <jacob@ximian.com>

	* *.pcf(.gz):
	* Makefile.am (cursorfont_DATA): 
	* gnome-mouse-properties.c (setup_dialog): use .pcf, not .pcf.gz
	as solaris can't read .gz files

	fixes #78023

Tue May 21 20:09:22 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-mouse-properties.c (event_box_button_press_event): fix
	broken double-click test.

Mon May 13 16:53:45 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-mouse-properties.c (main): uncomment accidentally
	commented lines.  Also, fixed text, #76413

2002-05-13  Jody Goldberg <jody@gnome.org>

	* gnome-mouse-properties.glade : Remove separator.
	  Remove accelerators in tabs.

2002-05-12  Anders Carlsson  <andersca@gnu.org>

	* gnome-mouse-properties.c: (drag_threshold_from_gconf),
	(drag_threshold_to_gconf), (event_box_button_press_event),
	(load_pixbufs), (setup_dialog), (create_dialog),
	(dialog_response_cb), (main):
	* gnome-mouse-properties.glade:
	Lots of things. Fix drag threshold preference, use a GtkImage
	instead of a GtkDrawingArea for the double click test. Remove
	weird weak refs throughout the code. Clean up the glade file,
	requires a new libglade that has an a11y ref count fix.
	
2002-05-10  Anders Carlsson  <andersca@gnu.org>

	* gnome-mouse-properties.c: (get_default_mouse_info),
	(motion_acceleration_from_gconf), (threshold_from_gconf):
	If the threshold or acceleration value is -1, just set the slider
	to the default X value.
	
2002-05-09  Jody Goldberg <jody@gnome.org>
