@@ -98,7 +98,7 @@
 			  <property name="spacing">8</property>
 
 			  <child>
-			    <widget class="GtkCheckButton" id="left_handed_toggle">
+			    <widget class="MouseCappletCheckButton" id="left_handed_toggle">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
 			      <property name="label" translatable="yes">_Left-handed mouse</property>
