@@ -1,3 +1,10 @@
+2002-07-10  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=85233
+	* gnome-mouse-properties.c (create_dialog) : register the custom
+	  checkbox for glade.
+	* gnome-mouse-properties.glade : Use the custom checkbox.
+
 2002-06-17  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.0.0
